RESOLVED FIXED162999
AX:[Mac] Unable to edit text input, textarea fields in iframe using VO naivgation
https://bugs.webkit.org/show_bug.cgi?id=162999
Summary AX:[Mac] Unable to edit text input, textarea fields in iframe using VO naivga...
Nan Wang
Reported 2016-10-05 23:55:01 PDT
When using webkit1 web view, it's unable to edit user editable fields in iframe when using VO navigation to access them.
Attachments
patch (5.74 KB, patch)
2016-10-06 00:12 PDT, Nan Wang
no flags
patch (5.75 KB, patch)
2016-10-06 00:39 PDT, Nan Wang
cfleizach: review+
Radar WebKit Bug Importer
Comment 1 2016-10-05 23:55:26 PDT
Nan Wang
Comment 2 2016-10-06 00:12:20 PDT
chris fleizach
Comment 3 2016-10-06 00:24:41 PDT
Comment on attachment 290787 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=290787&action=review > Source/WebCore/ChangeLog:8 > + In webkit1, the top web area setting the selection to an input element inside an iframe WebKit1 > Source/WebCore/ChangeLog:11 > + the input's frame and cause unwanted behavior. Fixed it by not setting the selection in such case. What was the unwanted behavior? Fixed it -> I fixed it > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2043 > + // In webkit1, when the top web area sets the selection to be an input element in an iframe, the caret will disappear. In WebKit1
Nan Wang
Comment 4 2016-10-06 00:39:08 PDT
Created attachment 290789 [details] patch update from review
chris fleizach
Comment 5 2016-10-06 00:40:59 PDT
Comment on attachment 290789 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=290789&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2045 > + if (isWebArea() && parentObject() && parentObject()->isAttachment()) { we should probably put this in a helper method. isRangeInDifferentDocument(range) or something to that effect thanks
Nan Wang
Comment 6 2016-10-06 01:06:12 PDT
Ryan Haddad
Comment 7 2016-10-06 09:23:47 PDT
The LayoutTest added with this change was asserting on mac-wk2 debug testers. Based on the changelog (and test name), I going to assume this isn't expected to work on wk2. Skipped test on mac-wk2 in http://trac.webkit.org/projects/webkit/changeset/206865
Note You need to log in before you can comment on or make changes to this bug.